[gd_scene load_steps=2 format=3 uid="uid://cqg2iojf2nmu8"]

[ext_resource type="Script" path="res://component/com_equipment/com_equipment.gd" id="1_463ty"]

[node name="com_equipment" type="Node2D"]
script = ExtResource("1_463ty")

[node name="main_hand" type="Node2D" parent="."]

[node name="sub_hand" type="Node2D" parent="."]
